feat: parameter annotations (#350)
* save progress

* update toString method of DefaultValue and subclasses
fix json parsing error in TypeValueForm

* resolve TypeValueForm name display error for boolean values
remove unnecessary casting

* add test cases
resolve edge case (not recognizing blank strings as default values)

* remove implicit first parameter of class methods
add attribute annotation
add tests for parameter annotations

* fix: set defaultValue of required parameters to null instead of an empty string

* style: format code & sort imports

* style: apply automatic fixes of linters

* chore: add more parameters to constructor in minimal test package

* feat: adjust stub creation

* feat: store description of API elements in stubs

* style: apply automatic fixes of linters

* refactor: minor changes

* fix: build error

* refactor: make location public

* fix move annotation bug
update adapter generation for attribute assignments
initialize attributes before processing
extract processPackage method and use it for testing
update ParameterAnnotationProcessor logic

* resolve original declaration null pointer exception

Co-authored-by: Lars Reimann <mail@larsreimann.com>
Co-authored-by: lars-reimann <lars-reimann@users.noreply.github.com>